--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -16,3 +16,8 @@ body {
 .theme-showcase .navbar .container {
   width: auto;
 }
+
+.inline-title h1, .inline-title h2, .inline-title h3, .inline-title h4{
+    display: inline-block;
+    vertical-align: baseline;
+}
